熔断通知 添加redis

--- a/api-passenger/pom.xml
+++ b/api-passenger/pom.xml
@@ -84,6 +84,13 @@
             <version>2.9.2</version>
         </dependency>
 
+
+        <!--引用redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
