--- a/taxi-gateway/src/main/resources/application.yml
+++ b/taxi-gateway/src/main/resources/application.yml
@@ -13,3 +13,8 @@ eureka:
   instance:
     hostname: localhost
     instance-id: online-taxi-gateway
+
+
+  zull:
+    routes:
+      api-passenger: /ap/**
