网关添加test服务

--- a/api-passenger/pom.xml
+++ b/api-passenger/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!--引入lombok依赖-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
