链路追踪 zipkin添加

--- a/api-passenger/pom.xml
+++ b/api-passenger/pom.xml
@@ -98,6 +98,17 @@
             <version>1.18.8</version>
         </dependency>
 
+        <!-- 引入sleuth依赖 -->
+        <!-- <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency> -->
+        <!-- zipkin -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
