--- a/service-sms/pom.xml
+++ b/service-sms/pom.xml
@@ -82,6 +82,18 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!-- 引入sleuth依赖 -->
+        <!-- <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency> -->
+
+        <!-- zipkin -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
 
     </dependencies>
 
