--- a/api-passenger/src/main/resources/application.yml
+++ b/api-passenger/src/main/resources/application.yml
@@ -15,6 +15,14 @@ spring:
     servlet:
       load-on-startup: 1
 
+  #zipkin
+  zipkin:
+    base-url: http://localhost:9411/
+    #采样比例1，百分之八采样
+  sleuth:
+    sampler:
+      rate: 1
+
 eureka:
   client:
     #设置服务注册中心的URL
