--- a/service-sms/src/main/resources/application.yml
+++ b/service-sms/src/main/resources/application.yml
@@ -31,12 +31,21 @@ spring:
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
+
+  #zipkin
+  zipkin:
+    base-url: http://localhost:9411/
+  #采样比例1，百分之八采样
+  sleuth:
+    sampler:
+      rate: 1
 mybatis:
   config-location: classpath:mybatis/mybatis.xml
   type-aliases-package: com.zhy.taxi.common
   mapper-locations:
     - classpath:mybatis/mapper/*.xml
 #注册中心
+
 eureka: 
 #  server:
 #    enable-self-preservation: false       #关闭保护机制
