--- a/taxi-gateway/src/main/resources/application.yml
+++ b/taxi-gateway/src/main/resources/application.yml
@@ -23,7 +23,13 @@ spring:
         uri: lb://SERVICE-SMS
         predicates:
         - Path=/service-sms-gateway-test/**
-
+  #zipkin
+  zipkin:
+    base-url: http://localhost:9411/
+    #采样比例1，百分之八采样
+  sleuth:
+    sampler:
+      rate: 1
 
 eureka:
   client:
