--- a/taxi-config-server/pom.xml
+++ b/taxi-config-server/pom.xml
@@ -7,55 +7,37 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
-        <relativePath/>
+        <version>2.1.8.RELEASE</version>
+        <relativePath/><!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.zhy.taxi.verificationcode</groupId>
-    <artifactId>verificationcode</artifactId>
+    <groupId>com.zhy.taxi.configserver</groupId>
+    <artifactId>taxi-config-server</artifactId>
     <version>1.0-SNAPSHOT</version>
-
 
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
     </properties>
 
-
     <dependencies>
-
-        <!-- web -->
+        <!-- 配置中心服务端：config-server -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
-
-        <!-- eureka客户端 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
-        <!-- 配置中心客户端：config-client -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-client</artifactId>
-        </dependency>
-
-
-        <!-- 健康检查 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-
-        <!-- 测试 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 
     <dependencyManagement>
         <dependencies>
