--- a/verificationcode/src/main/resources/bootstrap.yml
+++ b/verificationcode/src/main/resources/bootstrap.yml
@@ -2,6 +2,11 @@
 spring:
   application:
     name: service-verification-code
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     config:
       discovery:
@@ -9,7 +14,7 @@ spring:
         service-id: config-server
       profile: qa
 
-#注册中心
+#注册中心-此时注册中去用于找到config-server
 eureka:
   client:
     #设置服务注册中心的URL
@@ -21,3 +26,10 @@ eureka:
     #服务过期时间配置,超过这个时间没有接收到心跳EurekaServer就会将这个实例剔除
     lease-expiration-duration-in-seconds: 1
     hostname: localhost
+
+management:
+  endpoints:
+    web:
+      exposure:
+        #yml加双引号，properties不用加
+        include: "*"
