--- a/verificationcode/pom.xml
+++ b/verificationcode/pom.xml
@@ -51,11 +51,22 @@
         </dependency>
 
         <!-- 总线 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>-->
+        <!--引入redis 组件-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- 引用自定义通用组件 -->
+        <dependency>
+            <groupId>com.zhy.taxi.common</groupId>
+            <artifactId>taxi-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- 测试 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
