--- a/verificationcode/src/main/resources/bootstrap-8012.yml
+++ b/verificationcode/src/main/resources/bootstrap-8012.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8011
+  port: 8012
 #应用名称及验证账号
 spring:
   application:
@@ -10,12 +10,12 @@ spring:
 #    port: 5672
 #    username: guest
 #    password: guest
-#  cloud:
-#    config:
-#      discovery:
-#        enabled: true
-#        service-id: config-server
-#      profile: qa
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-server
+      profile: qa
 
 #注册中心-此时注册中去用于找到config-server
 eureka:
@@ -37,4 +37,3 @@ management:
         #yml加双引号，properties不用加
         include: "*"
 
-env: code
