--- a/verificationcode/src/main/resources/bootstrap-8011.yml
+++ b/verificationcode/src/main/resources/bootstrap-8011.yml
@@ -10,12 +10,12 @@ spring:
 #    port: 5672
 #    username: guest
 #    password: guest
-#  cloud:
-#    config:
-#      discovery:
-#        enabled: true
-#        service-id: config-server
-#      profile: qa
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-server
+      profile: qa
 
 #注册中心-此时注册中去用于找到config-server
 eureka:
