--- a/api-passenger/pom.xml
+++ b/api-passenger/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
