service-sms 代码整理

--- a/service-sms/src/main/resources/application.yml
+++ b/service-sms/src/main/resources/application.yml
@@ -60,3 +60,11 @@ eureka:
     metadata-map:
       user.name: root
       user.password: root
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
